[package]
name = "monkey_lang"
version = "0.1.0"
authors = ["Martin Rau <martin.rau@tum.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
test-case = "1.1.0"
lazy_static = "1.4.0"
itertools = "0.10.0"

[dev-dependecies]

